<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.rakickayakaterina.mycalculator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.20"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/inputFirstOp_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>

        <EditText
            android:id="@+id/inputSecondOp_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.10"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/add"/>

            <Button
                android:id="@+id/sub_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/sub"/>

            <Button
                android:id="@+id/mul_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/mul"/>

            <Button
                android:id="@+id/div_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="39dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/div"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/output__text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_weight="1"
        android:text="@string/answer"/>
</LinearLayout>

